tests/baselines/reference/objectLiteralPropertyImplicitlyAny.errors.txt
objectLiteralPropertyImplicitlyAny.ts(2,13): error TS7018: Object literal's property '[foo]' implicitly has an 'any' type.


==== objectLiteralPropertyImplicitlyAny.ts (1 errors) ====
    const foo = Symbol.for("foo");
    const o = { [foo]: undefined };
                ~~~~~~~~~~~~~~~~
!!! error TS7018: Object literal's property '[foo]' implicitly has an 'any' type.
    